--- a/src/home.html
+++ b/src/home.html
@@ -4,12 +4,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Главная</title>
+        <script src="https://api-maps.yandex.ru/v3/?apikey=402f83d9-3e90-4726-b547-87890093893a&lang=ru_RU"></script>
     </head>
     <body>
         <div class="wrapper home-page">
             <include src="./components/header.html"></include>
             <main>
                 <include src="./components/_hero.html"></include>
+                <include src="./components/_documentation.html"></include>
+                <include src="./components/_question-form.html"></include>
+                <include src="./components/_contacts-map.html"></include>
             </main>
             <include src="./components/footer.html"></include>
         </div>
