--- a/src/home.html
+++ b/src/home.html
@@ -42,6 +42,9 @@
             </header>
             <main>
                 <include src="./components/_hero.html"></include>
+                <include src="./components/_about-us.html"></include>
+                <include src="./components/_video.html"></include>
+                <include src="./components/_collections.html"></include>
                 <include src="./components/_documentation.html"></include>
                 <include src="./components/_question-form.html"></include>
                 <include src="./components/_contacts-map.html"></include>
