add: configurator page

--- a/src/home.html
+++ b/src/home.html
@@ -86,6 +86,7 @@
                 <include src="./components/_contacts-map.html"></include>
             </main>
             <include src="./components/footer.html"></include>
+            <include src="./components/modals.html"></include>
         </div>
     </body>
 </html>
