--- a/src/catalog.html
+++ b/src/catalog.html
@@ -12,8 +12,10 @@
             <main>
                 <include src="./components/_catalog.html"></include>
                 <include src="./components/_question-form.html"></include>
+                <include src="./components/_services.html"></include>
             </main>
             <include src="./components/footer.html"></include>
+            <include src="./components/modals.html"></include>
         </div>
     </body>
 </html>
