--- a/src/product.html
+++ b/src/product.html
@@ -11,10 +11,12 @@
             <include src="./components/header.html"></include>
             <main>
                 <include src="./components/_product.html"></include>
+                <include src="./components/_services.html"></include>
                 <include src="./components/_question-form.html"></include>
                 <include src="./components/_contacts-map.html"></include>
             </main>
             <include src="./components/footer.html"></include>
+            <include src="./components/modals.html"></include>
         </div>
     </body>
 </html>
